--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 </head>
 <body>
 
-    <div class="container">
+    <section class="container">
       <div class="code">
         <img src="images/image-qr-code.png" alt="qr code">
       </div>
       <div class="textbox">
-        <p class="toptext">Improve your front-end skills by building projects</p>
+        <h1 class="toptext">Improve your front-end skills by building projects</h1>
         <p class="bottext"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
-    </div>
+    </section>
 
 </body>
 </html>
